@@ -21,7 +21,7 @@ my $prereqs  = {
     'Moo' => '2.000001',
     'Try::Tiny' => '0.22',
     'Unexpected' => 'v0.39.0',
-    'Web::ComposableRequest' => 'v0.2.0',
+    'Web::ComposableRequest' => 'v0.6.0',
     'Web::Simple' => '0.030',
     'namespace::autoclean' => '0.26',
     'perl' => '5.010001',
